🐛 fix: fixed some bugs

--- a/SwashbucklerDiary/Components/LocationListItem.razor
+++ b/SwashbucklerDiary/Components/LocationListItem.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MyComponentBase
 
-<MListItem>
+<MListItem @oncontextmenu="()=>ShowMenu=true">
     <MListItemIcon>
         <MIcon Class="list-item-icon">
             mdi-map-marker-outline
