--- a/SwashbucklerDiary/Pages/SearchPage.razor
+++ b/SwashbucklerDiary/Pages/SearchPage.razor
@@ -12,6 +12,7 @@
     <MTextField TValue="string"
                 Value="Search"
                 ValueChanged="TextChanged"
+                Class="ml-3"
                 Solo
                 Flat
                 Autofocus
