--- a/SwashbucklerDiary/Pages/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/SettingPage.razor
@@ -51,6 +51,7 @@
                     <MSwitch @bind-Value="Title"
                              TValue="bool"
                              OnChange="TitleChange"
+                             Color="black"
                              Dense
                              Inset>
                     </MSwitch>
@@ -72,6 +73,7 @@
                     <MSwitch Value="Markdown"
                              TValue="bool"
                              OnChange="MarkdownChange"
+                             Color="black"
                              Dense
                              Inset>
                     </MSwitch>
@@ -103,6 +105,7 @@
                              OnChange="PrivacyChange"
                              Readonly
                              OnClick="PrivacyClick"
+                             Color="black"
                              Dense
                              Inset>
                     </MSwitch>
