--- a/SwashbucklerDiary/Components/TagCard.razor
+++ b/SwashbucklerDiary/Components/TagCard.razor
@@ -3,6 +3,7 @@
 <MCard Class="mb-5 tag-card"
        Ripple="false"
        Rounded="@("lg")"
+       @oncontextmenu="()=>ShowMenu=true"
        OnClick="OnClick">
     <MListItem>
         <MListItemIcon>
