🐛 fix: fixed Language dialog cannot open

--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -130,6 +130,7 @@
                          TValue="string"
                          ValueChanged="LanguageChanged"
                          Class="mt-0 pb-1"
+                         OnClick="()=>ShowLanguage=false"
                          HideDetails="@("auto")"
                          Mandatory>
                 @foreach (var item in Languages)
