🆕 feat: QuitApp Toast support I18n

--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -27,7 +27,7 @@
     <SwiperTabItem>
         <div class="mb-8 px-2">
             <MSubheader Class="px-0">
-                @(DateTime.Now.ToString("yyyy/MM/dd") + " " + DateTime.Now.ToWeek(I18n))
+                @(DateTime.Now.ToString("yyyy/MM/dd") + " " + I18n.ToWeek())
             </MSubheader>
 
             <div class="text-h6 font-weight-bold">
