--- a/SwashbucklerDiary/Pages/ExportPage.razor
+++ b/SwashbucklerDiary/Pages/ExportPage.razor
@@ -10,11 +10,11 @@
            Rounded="@("lg")">
         <MList TwoLine>
             <MListItem OnClick="Export">
-                <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                <MListItemAvatar>
+                    <MIcon Class="list-item-icon" Size="28">
                         mdi-export
                     </MIcon>
-                </MListItemIcon>
+                </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle>
                         @(I18n.T("Export.Export"))
@@ -31,11 +31,11 @@
             <MDivider Class="mx-3 mx-sm-0"></MDivider>
 
             <MListItem OnClick="Import">
-                <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                <MListItemAvatar>
+                    <MIcon Class="list-item-icon" Size="28">
                         mdi-import
                     </MIcon>
-                </MListItemIcon>
+                </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle>
                         @(I18n.T("Export.Import"))
