--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -112,7 +112,7 @@
             @foreach (var item in SelectedTags)
             {
                 <MChip Close
-                   Outlined="Mobile"
+                   Outlined
                    OnCloseClick="()=>RemoveSelectedTag(item)">
                 @(item.Name)
                 </MChip>
