--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -28,10 +28,10 @@
                     </MListItemAvatar>
                     <MListItemContent>
                         <MListItemTitle Class="text-h6 font-weight-bold">
-                            @(string.IsNullOrEmpty(UserName) ? I18n.T("AppName") : "")
+                            @(string.IsNullOrEmpty(UserName) ? I18n.T("AppName") : UserName)
                         </MListItemTitle>
                         <MListItemSubtitle>
-                            @(string.IsNullOrEmpty(Sign) ? I18n.T("Mine.Sign") : "")
+                            @(string.IsNullOrEmpty(Sign) ? I18n.T("Mine.Sign") : Sign)
                         </MListItemSubtitle>
                     </MListItemContent>
                     <MListItemAction Style="align-self:unset;">
