♻️ refactor(WritePage): optimize input

--- a/SwashbucklerDiary/Components/MyMarkdown.razor
+++ b/SwashbucklerDiary/Components/MyMarkdown.razor
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div class="@WrapClass">
     <MMarkdown Value="@Value"
                ValueChanged="ValueChanged"
                Class="@Class"
