--- a/SwashbucklerDiary/Components/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/ScrollContainer.razor
@@ -1,5 +1,5 @@
 ﻿<div id="@Id" class="overflow-y-auto @(Class)" style="@($"max-height:{Height}px;min-height:{Height}px;")" @oncontextmenu="OnContextmenu">
-    <MContainer Style="box-sizing: border-box;">
+    <MContainer Class="@(ContentClass)" Style="box-sizing: border-box;">
         @ChildContent
     </MContainer>
 </div>
