--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -47,10 +47,16 @@
 
 <ScrollContainer Id="scrolling-read">
     <div id="screenshot">
-        <div class="px-3 text-h6 font-weight-bold">
-            <span>@(Diary.CreateTime.ToString("yyyy/MM/dd"))</span>
+        <div class="px-3 d-flex align-end">
+            <span class="text-h6 font-weight-bold">
+                @(Diary.CreateTime.ToString("yyyy/MM/dd"))
+            </span>
             <span class="pl-5 text-subtitle-1">
                 @(I18n.ToWeek(Diary.CreateTime))
+            </span>
+            <MSpacer></MSpacer>
+            <span class="text-subtitle-1">
+                @(CounterValue())
             </span>
         </div>
         <div class="px-2">
