🐛 fix: fixed get focus when input dialog open

--- a/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
@@ -3,7 +3,8 @@
 
 <MyDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
-          MaxWidth="420">
+          MaxWidth="420"
+          @ref="myDialog">
     <MCard Rounded="@("lg")">
         <MCardTitle>
             @Title
