--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -1,12 +1,13 @@
 ﻿@namespace SwashbucklerDiary.Components
-@inherits DialogComponentBase
+@inherits DialogFocusComponentBase
 @using System.ComponentModel.DataAnnotations
 @using FluentValidation;
 
 
 <MyDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
-          MaxWidth="420">
+          MaxWidth="420"
+          @ref="myDialog">
     <MForm @ref="@form" Model="@model" OnValidSubmit="HandleOnOK" EnableValidation EnableI18n>
         <MCard Rounded="@("lg")">
             <MCardTitle>
@@ -19,28 +20,29 @@
                         mdi-close
                     </MIcon>
                 </MButton>
-                </MCardTitle>
-                <MCardText Class="pb-0">
+            </MCardTitle>
+            <MCardText Class="pb-0">
                 <MTextField @bind-Value="model.Password"
+                            @ref="TextField"
                             Dense
                             HideDetails="@("auto")"
                             Outlined
                             Counter="@MaxLength"
-                                            maxlength="@MaxLength"
-                                            spellcheck="false"
+                            maxlength="@MaxLength"
+                            spellcheck="false"
                             Placeholder="@(I18n.T("Please input a password"))">
                 </MTextField>
                 <MTextField @bind-Value="model.PasswordConfirmation"
                             Dense
                             Outlined
                             Counter="@MaxLength"
-                                            maxlength="@MaxLength"
-                                            spellcheck="false"
+                            maxlength="@MaxLength"
+                            spellcheck="false"
                             Placeholder="@(I18n.T("Please enter the password again"))">
                 </MTextField>
 
-                </MCardText>
-                <MCardActions>
+            </MCardText>
+            <MCardActions>
                 <MSpacer></MSpacer>
                 <MButton Text OnClick="HandleOnCancel">
                     @(I18n.T("Share.Cancel"))
