--- a/SwashbucklerDiary/Pages/MinePage.razor.css
+++ b/SwashbucklerDiary/Pages/MinePage.razor.css
@@ -1,5 +1,5 @@
 ﻿.mine-title {
-    display: none;
+    display: none !important;
     font-weight: 700 !important;
     padding-bottom:20px;
     padding-left:4px;
@@ -11,7 +11,7 @@
 
 @media screen and (min-width:960px) {
     .mine-title {
-        display: block;
+        display: block !important;
     }
     ::deep .mine-info{
         width:50%;
