--- a/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
+++ b/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
@@ -1,9 +1,13 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div class="@("swiper " + Id)">
+<div class="@("swiper " + Id)" style="@(Show?"":"display:none;")">
     <div class="swiper-wrapper">
         @ChildContent
     </div>
+</div>
+
+<div class="justify-center" style="@($"padding-top:30vh;{(Show?"display:none;":"display:flex;")}")">
+    <MProgressCircular Indeterminate Size="48"></MProgressCircular>
 </div>
 
 <link href="npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
