--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -4,7 +4,7 @@
 <MAppBar App
          Elevation="0"
          Color="white">
-    <MTabs @bind-Value="tabs"
+    <MTabs @bind-Value="tab"
            ActiveClass="text-h6 font-weight-bold"
            HideSlider
            Color="black">
@@ -23,7 +23,7 @@
     </MButton>
 </MAppBar>
 
-<SwiperTabItems @bind-Value="tabs" OnRefresh="RefreshData">
+<SwiperTabItems @bind-Value="tab">
     <SwiperTabItem>
         <div class="mb-8 px-2">
             <MSubheader Class="px-0">
@@ -42,7 +42,7 @@
     </SwiperTabItem>
 </SwiperTabItems>
 
-@if (tabs == 0)
+@if (tab == 0)
 {
     <FabTransition>
         <MButton Color="black"
@@ -60,7 +60,7 @@
     </FabTransition>
 }
 
-@if (tabs == 1)
+@if (tab == 1)
 {
     <FabTransition>
         <MButton Color="black"
